maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:2: error: class Array takes type parameters
def getBisctuit():Array = {
                  ^JediEscaper:2: error: class Array takes type parameters
def getBisctuit():Array = {
                  ^